--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#309dff"
     tools:context=".MainActivity">
 
+    <EditText
+        android:id="@+id/register_activity_email_edt"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:hint="E-mail"
+        android:paddingLeft="10dp"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        android:background="#155e76"
+        android:textColorHint="#a9a9a9"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.39" />
+
+    <EditText
+        android:id="@+id/register_activity_pass_edt"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="2dp"
+        android:background="#155e76"
+        android:hint="Şifre"
+        android:paddingLeft="10dp"
+        android:textColor="#fff"
+        android:textColorHint="#a9a9a9"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_activity_email_edt" />
+
+    <Button
+        android:id="@+id/register_Activity_register_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="#0068c5"
+        android:text="Kayıt Ol"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/register_activity_email_edt"
+        app:layout_constraintStart_toStartOf="@+id/register_activity_email_edt"
+        app:layout_constraintTop_toBottomOf="@+id/register_activity_pass_edt" />
+
+    <TextView
+        android:id="@+id/register_activity_title_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Kayıt Ol / Giriş Yap"
+        android:textSize="19sp"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/register_activity_email_edt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
