--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -58,20 +58,20 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/register_activity_email_edt"
         app:layout_constraintStart_toStartOf="@+id/register_activity_email_edt"
-        app:layout_constraintTop_toBottomOf="@+id/register_activity_pass_edt" />
+        app:layout_constraintTop_toBottomOf="@+id/register_activity_login_txt" />
 
     <TextView
         android:id="@+id/register_activity_title_txt"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Kayıt Ol"
-        android:textSize="19sp"
-        android:textColor="#fff"
-        android:textStyle="bold"
         android:gravity="center"
+        android:text="Kayıt Ol"
+        android:textColor="#155e76"
+        android:textSize="21sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/register_activity_email_edt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
