--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#309dff"
+    android:background="@drawable/ic_background_green_blue"
     tools:context=".RegisterActivity">
 
     <EditText
@@ -14,19 +14,19 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:hint="E-mail"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/edittext_background"
+        android:hint="@string/e_mail_txt"
         android:paddingLeft="10dp"
-        android:textColor="#fff"
+        android:textColor="@color/colorGreenDark"
+        android:textColorHint="@color/text_hint_color"
         android:textStyle="bold"
-        android:background="#155e76"
-        android:textColorHint="#a9a9a9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39" />
+        app:layout_constraintTop_toBottomOf="@+id/register_activity_title_txt"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/register_activity_pass_edt"
@@ -35,11 +35,13 @@
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="2dp"
-        android:background="#155e76"
-        android:hint="Şifre"
+        android:background="@drawable/edittext_background"
+        android:hint="@string/sifre_txt"
+        android:maxLength="10"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
-        android:textColor="#fff"
-        android:textColorHint="#a9a9a9"
+        android:textColor="@color/colorGreenDark"
+        android:textColorHint="@color/text_hint_color"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,34 +49,37 @@
 
     <Button
         android:id="@+id/register_Activity_register_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="8dp"
-        android:background="#0068c5"
-        android:text="Kayıt Ol"
-        android:textColor="#fff"
+        android:background="@drawable/ic_login_button_background"
+        android:text="@string/activity_register_kayit_ol_btn_txt"
+        android:textColor="#155e76"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/register_activity_email_edt"
-        app:layout_constraintStart_toStartOf="@+id/register_activity_email_edt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_activity_login_txt" />
 
     <TextView
         android:id="@+id/register_activity_title_txt"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:background="@drawable/ic_title_background"
         android:gravity="center"
-        android:text="Kayıt Ol"
-        android:textColor="#155e76"
+        android:text="@string/activity_register_kayit_ol_title_txt"
+        android:textColor="@color/colorBlueDark"
         android:textSize="21sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/register_activity_email_edt"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25" />
 
     <TextView
         android:id="@+id/register_activity_login_txt"
@@ -83,12 +88,36 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Giriş Yap"
         android:padding="5dp"
+        android:text="@string/activity_register_giris_yap_text"
         android:textSize="16sp"
+        android:textColor="@color/colorBlueDark"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/register_activity_pass_edt"
+        app:layout_constraintTop_toBottomOf="@+id/register_activity_spinner_select_job" />
+
+    <Spinner
+        android:id="@+id/register_activity_spinner_select_job"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="2dp"
+        android:spinnerMode="dropdown"
+        android:background="@drawable/edittext_background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_activity_pass_edt" />
+
+    <ImageView
+        android:id="@+id/activity_register_spinner_arrow"
+        android:layout_width="35dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/register_activity_spinner_select_job"
+        app:layout_constraintEnd_toEndOf="@+id/register_activity_spinner_select_job"
+        app:layout_constraintTop_toTopOf="@+id/register_activity_spinner_select_job"
+        app:srcCompat="@drawable/ic_spinner_arrow" />
 </android.support.constraint.ConstraintLayout>
