--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -9,6 +9,14 @@
             android:icon="@drawable/ic_profile_user"
             android:title="Profilim" />
         <item
+            android:id="@+id/nav_give_job_ad"
+            android:icon="@drawable/ic_premium_package_symbol"
+            android:title="İş ilanı Ver" />
+        <item
+            android:id="@+id/nav_job_list"
+            android:icon="@drawable/ic_premium_package_symbol"
+            android:title="İş İlanları" />
+        <item
             android:id="@+id/nav_premium_packages"
             android:icon="@drawable/ic_premium_package_symbol"
             android:title="Premium Paketler" />
